# VoiceNote-SW

./: README.md
.github/workflows/: cppcheck.yml
from_hw/: design_1_wrapper.xsa
liblvgl/: compile_commands.json  vitis-comp.json
liblvgl/src/: CMakeLists.txt  UserConfig.cmake
liblvgl/src/lvgl/: lv_conf.h
voice_note_app_amp0/: .gitignore  vitis-comp.json
voice_note_app_amp0/_ide/bitstream/: design_1_wrapper.bit
voice_note_app_amp0/src/: CMakeLists.txt  UserConfig.cmake  app.yaml  lscript.ld
voice_note_app_amp0/src/common/: common.h  mmu_utility.h  utility.h
voice_note_app_amp0/src/log/: logger_core.cpp  logger_core.h
voice_note_app_amp0/src/main/: main.cpp
voice_note_app_amp1/: vitis-comp.json
voice_note_app_amp1/_ide/: hwspec.checksum
voice_note_app_amp1/_ide/psinit/: audio_clean_up.tcl  ps7_init.tcl
voice_note_app_amp1/src/: .clang-format  CMakeLists.txt  UserConfig.cmake  lscript.ld
voice_note_app_amp1/src/app/: fsm.cpp  fsm.h  system.cpp  system.h
voice_note_app_amp1/src/common/: common.h  utility.h
voice_note_app_amp1/src/log/: logger_core.cpp  logger_core.h
voice_note_app_amp1/src/main/: main.cpp
voice_note_platform/: .gitignore  vitis-comp.json
voice_note_platform/hw/: design_1_wrapper.xsa
voice_note_platform/zynq_fsbl/: CMakeLists.txt  app.yaml  ps7_init.c
voice_note_platform/zynq_fsbl/zynq_fsbl_bsp/: bsp.yaml  lib_list.yaml  lop-config.dts.dtb  (+1 more)
voice_note_sys/: CMakeLists.txt  vitis-sys.json
voice_note_sys/_ide/: hwspec.checksum  launch.json
voice_note_sys/doc/: SW基本設計書.md
voice_note_sys/output/: untitled.bif
(+375 files in other folders)
